Set up for less

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet/less" type="text/css" href="styles.less" />
     <link rel="stylesheet" href="">
-    <title></title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>Bob's Burgers</title>
     <meta name="description" content="">
   </head>
   <body>
@@ -14,13 +17,17 @@
       <li>About Us</li>
       <li>Order Now</li>
     </ul>
+    <img src="img/banner-bg.png" alt="hero-image" title="hero-image" />
     <h1>Bob's Burgers</h1>
     <button>Order Now</button>
     <h2>World's Best Burgers</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
     <button>View Menu</button>
+    <img src="img/bobs-burger.png" alt="burger" title="burger" />
+    <img src="img/bob-headshot.png" alt="bob holding a burger" title="bob holding a burger" />
     <h2>Dine-in or Take-out</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
     <button>Contact Us</button>
+    <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
   </body>
 </html>
