--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,31 +30,59 @@
         </ul>
       </header>
 
-      <img src="img/banner-bg.png" alt="hero-image" title="hero-image" />
+      <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-xs-12 col-sm-6 col-md-8 col-centered">
+                <div class="maintxt">
+                    <img class="logo" src="img/logo.png" alt="logo" />
+                    <button>ORDER NOW</button>
+                </div>
+            </div>
+        </div>
+      </div>
 
-      <img src="img/logo.png" alt="logo" />
-      <button>ORDER NOW</button>
+      <!-- <img src="img/banner-bg.jpg" alt="hero-image" title="hero-image" />
 
-      <h2>WORLD'S BEST <span>BURGERS</span></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+      <img src="img/logo.png" alt="logo" /> -->
 
-      <button>VIEW MENU</button>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col">
+            <h2>WORLD'S BEST <span>BURGERS</span></h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
 
-      <img src="img/bobs-burger.png" alt="burger" title="burger" />
+              <button>VIEW MENU</button>
+            </div>
 
-      <section>
-        <img src="img/bob-headshot.png" alt="bob holding a burger" title="bob holding a burger" />
+            <div class="col-md-auto">
+              <img src="img/bobs-burger.png" alt="burger" title="burger" />
+            </div>
+          </div>
+        </div>
 
-        <h2>DINE-IN OR <span>TAKE-OUT</span></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
-        <button>CONTACT US</button>
-      </section>
+      <div class="container-fluid bg">
+          <div class="row">
+            <div class="col-md-auto">
+              <img class="float-right" src="img/bob-headshot.png" alt="bob holding a burger" title="bob holding a burger" />
+            </div>
+
+          <div class="col">
+            <h2>DINE-IN OR <span>TAKE-OUT</span></h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
+            <button>CONTACT US</button>
+          </div>
+        </div>
+      </div>
 
     </main>
       <hr />
       <footer>
-        <img src="img/logo.png" alt="logo" />
+        <img class="logo" src="img/logo.png" alt="logo" />
       </footer>
+
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
       <script src="//cdn.jsdelivr.net/npm/less@3.13" ></script>
   </body>
