--- a/index.html
+++ b/index.html
@@ -30,20 +30,18 @@
         </ul>
       </header>
 
-      <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="col-xs-12 col-sm-6 col-md-8 col-centered">
-                <div class="maintxt">
-                    <img class="logo" src="img/logo.png" alt="logo" />
-                    <button>ORDER NOW</button>
-                </div>
+        <div class="container1">
+          <div class="row">
+            <div class="col">
+              <img class="logo top-logo" src="img/logo.png" alt="logo" />
             </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <button>ORDER NOW</button>
+            </div>
+          </div>
         </div>
-      </div>
-
-      <!-- <img src="img/banner-bg.jpg" alt="hero-image" title="hero-image" />
-
-      <img src="img/logo.png" alt="logo" /> -->
 
       <div class="container-fluid">
         <div class="row">
@@ -67,7 +65,7 @@
             </div>
 
           <div class="col">
-            <h2>DINE-IN OR <span>TAKE-OUT</span></h2>
+            <h2>DINE-IN or <span>TAKE-OUT</span></h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
             <button>CONTACT US</button>
           </div>
