--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
               <button>VIEW MENU</button>
             </div>
 
-            <div class="col-md-auto">
-              <img src="img/bobs-burger.png" alt="burger" title="burger" />
+            <div class="col-md-auto align-self-center">
+              <img class="img" src="img/bobs-burger.png" alt="burger" title="burger" />
             </div>
           </div>
         </div>
@@ -61,10 +61,10 @@
       <div class="container-fluid bg">
           <div class="row">
             <div class="col-md-auto">
-              <img class="float-right" src="img/bob-headshot.png" alt="bob holding a burger" title="bob holding a burger" />
+              <img class="float-right bob img" src="img/bob-headshot.png" alt="bob holding a burger" title="bob holding a burger" />
             </div>
 
-          <div class="col">
+          <div class="col align-self-center">
             <h2>DINE-IN or <span>TAKE-OUT</span></h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</p>
             <button>CONTACT US</button>
