fixed responsiveness again

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <button>VIEW MENU</button>
             </div>
 
-            <div class="col-md-auto align-self-center">
+            <div class="col-sm-auto align-self-center">
               <img class="img" src="img/bobs-burger.png" alt="burger" title="burger" />
             </div>
           </div>
@@ -60,7 +60,7 @@
 
       <div class="container-fluid bg">
           <div class="row">
-            <div class="col-md-auto">
+            <div class="col-sm-auto">
               <img class="float-right bob img" src="img/bob-headshot.png" alt="bob holding a burger" title="bob holding a burger" />
             </div>
 
